Fix wrap

--- a/static/css/landing/organizadores.css
+++ b/static/css/landing/organizadores.css
@@ -33,3 +33,6 @@
   background-image: url("../../static_media/organizadores.jpg");
   background-position: top;
 }
+.content > .container {
+  flex-wrap: wrap;
+}
